--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -3,6 +3,7 @@
        - docker-compose#v3.7.0:
           config: .buildkite/docker-compose.yaml
           run: app_read
+          image: 414402341205.dkr.ecr.us-east-1.amazonaws.com/assurance-ruby:2.6.6 
           environment:
             - SSH_AUTH_SOCK=/ssh-agent.sock
             - REDIS_VALUE=mytestvalue115
